<resources>
    <string name="app_name">Inventory App</string>
    <string name="name">Name:</string>
    <string name="desc">Description:</string>
    <string name="price">Price:</string>
    <string name="quantity">Quantity:</string>
    <string name="image">Image: </string>
    <string name="hint">Type here</string>
    <string name="submit">Submit</string>
    <string name="no_items_found">No items in the Inventory. Press the add button to add items.</string>
    <string name="image_select">Select Image</string>
    <string name="order">Order</string>
</resources>
