<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/back_input"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/back"/>
    <TextView
        android:id="@+id/name"
        android:textColor="#000000"
        android:layout_below="@id/back_input"
        android:layout_alignParentLeft="true"
        android:text="@string/name"
        style="@style/input" />
    <EditText
        android:id="@+id/name_input"
        android:layout_below="@id/back_input"
        android:layout_toRightOf="@id/name"
        style="@style/input"
        android:hint="@string/hint"/>
    <TextView
        android:id="@+id/quantity"
        android:textColor="#000000"
        android:layout_below="@id/name"
        android:text="@string/quantity"
        style="@style/input" />
    <EditText
        android:id="@+id/quantity_input"
        android:layout_toRightOf="@id/quantity"
        android:layout_below="@id/name"
        android:inputType="number"
        style="@style/input"
        android:hint="@string/hint"/>
    <TextView
        android:id="@+id/price"
        android:textColor="#000000"
        android:layout_below="@id/quantity"
        android:text="@string/price"
        style="@style/input" />
    <EditText
        android:id="@+id/price_input"
        android:layout_toRightOf="@id/price"
        android:layout_below="@id/quantity_input"
        android:inputType="numberDecimal"
        style="@style/input"
        android:hint="@string/hint"/>
    <Button
        android:id="@+id/image_input"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/price_input"
        style="@style/input"
        android:hint="@string/image_select"/>
    <TextView
        android:id="@+id/desc"
        android:textColor="#000000"
        android:layout_below="@id/image_input"
        android:text="@string/desc"
        style="@style/input" />
    <EditText
        android:id="@+id/desc_input"
        android:layout_toRightOf="@id/desc"
        android:layout_below="@id/image_input"
        style="@style/input"
        android:hint="@string/hint" />
    <Button
        android:id="@+id/submit_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/desc"
        android:text="@string/submit"/>

</RelativeLayout>